enhance genjson with scala-library generation (scalac failed)